Primera version de platzi conf hawaii

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                    </div>
               </form>
               <div class="alert alert-warning" role="alert">
-               Recibiras un correo de confirmación si sales sorteado
+               Recibiras un correo de confirmación si sales sorteados
               </div>
             </div>
             <div class="modal-footer">
